# getting-started-examples

./: .gitignore  .pre-commit-config.yaml  README.md
banking-agent/: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile.fastapi  Dockerfile.streamlit  README.md  pyproject.toml  streamlit_app.py
banking-agent/src/: main.py
banking-agent/src/agent/: __init__.py  accounts_model.py  banking_tools.py  graph.py  llm.py  prompt.py
batch-inference/: README.md  batch_infer.py  deploy.py  deployment-requirements.txt  requirements.txt  sample.csv  sample.out.csv  truefoundry.yaml
calculator-oauth-mcp-server/: .env.example  README.md  calculator.py  deploy.py  test.py
chat-llm-streamlit/: app.py
customer-churn/: README.md  deploy.py  main.py  python_sdk_customer_churn.ipynb  requirements.txt  servicefoundry_cli_customer_churn.ipynb
data-processing-job/: deploy.py  pre-process.py  (+1 more)
plot_agent/crewai_plot_agent/: .pre-commit-config.yaml  README.md  deploy.py  deploy_fast_api.py  pyproject.toml  report.md  requirements.txt  setup.py
plot_agent/crewai_plot_agent/crewai_plot_agent/: api.py  app.py  crew.py  main.py
plot_agent/crewai_plot_agent/crewai_plot_agent/config/: agents.yaml  tasks.yaml
plot_agent/crewai_plot_agent/crewai_plot_agent/tools/: clickhouse_tool.py  plot_tool.py
plot_agent/crewai_plot_agent/src/crewai_plot_agent/: api.py  app.py  crew.py  main.py
plot_agent/crewai_plot_agent/src/crewai_plot_agent/config/: agents.yaml  tasks.yaml
plot_agent/crewai_plot_agent/src/crewai_plot_agent/tools/: clickhouse_tool.py  plot_tool.py
(+287 files in other folders)
