[project]
name = "crewai_plot_agent"
version = "0.1.0"
description = "crewai_plot_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "clickhouse-connect>=0.8.17",
    "crewai[tools]>=0.102.0,<1.0.0",
    "fastapi>=0.115.11",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "streamlit>=1.45.0",
    "traceloop-sdk>=0.40.2",
    "fastapi>=0.115.12",
    "openlit>=1.33.20",
    "opentelemetry-instrumentation-fastapi",
]

[project.scripts]
crewai_plot_agent = "crewai_plot_agent.main:run"
run_crew = "crewai_plot_agent.main:run"
train = "crewai_plot_agent.main:train"
replay = "crewai_plot_agent.main:replay"
test = "crewai_plot_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
